SFDC Automation/src/objects/Survey_Question__c.object
<CustomObject>
    <description>Line item detail to store sequence, question and answers for a particular survey campaign</description>
    <fields>
        <fullName>Answer_Sequence__c</fullName>
        <label>Answer Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answer details for a question</description>
        <label>Answer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <description>Indicates the sequence of questions on the survey</description>
        <label>Question Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Survey Question</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Campaign__c</fullName>
        <description>Survey header to which the Question/Answer line items relate.</description>
        <label>Survey Campaign</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ext_SurveyQuestionId__c</fullName>
        <description>Used for ETL / Migration activities</description>
        <externalId>true</externalId>
        <label>ext_SurveyQuestionId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>